--- a/staticfiles/base/css/style.css
+++ b/staticfiles/base/css/style.css
@@ -50,7 +50,7 @@ header{
 
 .breadcrumb:before {
     content: '\E5CC';
-    color: rgba(255,255,255,0.7);
+    color: rgba(17, 17, 17, 0.7);
     vertical-align: bottom;
     display: inline-block;
     font-family: 'Material Icons';
@@ -137,7 +137,7 @@ header{
 
 .reference-collection{
    margin-left: 0rem !important;
-    margin-right: 0rem !important; 
+    margin-right: 0rem !important;
 }
 
 
