--- a/userprofile/templates/userprofile/components/forms/signup_form.html
+++ b/userprofile/templates/userprofile/components/forms/signup_form.html
@@ -1,5 +1,6 @@
 {% extends "./base_form.html" %}
 {% load static %}
+{% load materializecss %}
 
 {% block form_image %}
 <img height="200" width="auto" src="{% static 'img/computer-guy.svg' %}" alt="" />
