--- a/userprofile/templates/userprofile/components/forms/send_request_form.html
+++ b/userprofile/templates/userprofile/components/forms/send_request_form.html
@@ -14,9 +14,13 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.company_name|materializecss }}
-        <p>between what dates did you work here?</p>
         {{ form.date_from|materializecss:"s6, helper=hello " }}
         {{ form.date_to|materializecss:"s6" }}
+        <div class="row">
+            <div class="col s12 center-align">
+                <span id="from-to-helper" class="helper-text grey-text">between what dates did you work here?</span>
+            </div>
+        </div>
         {{ form.to_email|materializecss }}
         <div class="row valign-wrapper row-margin-add">
             <div class=" col s12 right-align">
