--- a/userprofile/templates/userprofile/components/forms/send_request_form.html
+++ b/userprofile/templates/userprofile/components/forms/send_request_form.html
@@ -14,7 +14,7 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.company_name|materializecss }}
-        {{ form.date_from|materializecss:"s6, helper=hello " }}
+        {{ form.date_from|materializecss:"s6" }}
         {{ form.date_to|materializecss:"s6" }}
         <div class="row">
             <div class="col s12 center-align">
