--- a/userprofile/templates/userprofile/respond.html
+++ b/userprofile/templates/userprofile/respond.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container ">
+    <div class="container">
         <div class="row">
             <div class="col l9  align-left">{% include "./components/forms/respond_form.html" %}</div>
             <div class="col l3 ">
@@ -36,7 +36,7 @@
 
                 </p>
                 <hr/>
-                <h5 class="hsx" >Would you like to store your own references with pytagora? <br/> <a target="_blank" href="{% url 'signup' %}">sign up here.</a></h5>
+                <p class="deep-purple-text" >Would you like to store your own references with pytagora? <br/> <a target="_blank" href="{% url 'signup' %}">sign up here.</a></p>
                 
             </div>
             
