--- a/userprofile/templates/userprofile/components/forms/send_request_form.html
+++ b/userprofile/templates/userprofile/components/forms/send_request_form.html
@@ -18,11 +18,12 @@
         {{ form.date_to|materializecss:"s6" }}
         <div class="row">
             <div class="col s12 center-align">
-                <span id="from-to-helper" class="helper-text grey-text">between what dates did you work here?</span>
+                <span id="from-to-helper" class="helper-text grey-text"></span>
             </div>
         </div>
         {{ form.to_email|materializecss }}
-        <div class="row valign-wrapper row-margin-add">
+        
+        <div class="row imput-field">
             <div class=" col s12 right-align">
                 <button type="submit" class="btn">Submit</button>
             </div>
