--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container center grey lighten-3">
+    <div class="container center lighten-3">
         <section class="profile-section">
             <div class="heading-row row row-margin-delete">
                 <div class="heading-box col s12">
@@ -12,8 +12,7 @@
                 <nav class="crumbs-box col s10 m6 right transparent z-depth-0">
                     <div class="nav-wrapper right ">
                           <a  href="#!" class="breadcrumb black-text">Profile</a>
-                          <a  href="#!" class="breadcrumb grey-text">Send</a>
-                          <a  href="#!" class="breadcrumb grey-text">References</a>
+                          <a  href="{% url 'send_request' %}" class="breadcrumb grey-text">Send Request</a>
                     </div>
                 </nav>
             </div>
