--- a/userprofile/templates/userprofile/send_request.html
+++ b/userprofile/templates/userprofile/send_request.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div class="container">
     <div class="heading-row row row-margin-delete">
-        <div class="heading-box col s12">
-            <h2 class="hm right">Hey {{ user.first_name }}!</h2>
+        <div class="heading-box right-align col s12">
+            <h2 class="hm ">Ask for a reference</h2>
+            <p>Simply by sending this form</p>
         </div>
     </div>
     <div class="crumbs-row row">
