--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -4,8 +4,9 @@
     <div class="container center lighten-3">
         <section class="profile-section">
             <div class="heading-row row row-margin-delete">
-                <div class="heading-box col s12">
-                    <h2 class="hm right">Hey {{ user.first_name }}!</h2>
+                <div class="heading-box right-align col s12">
+                    <h2 class="hm ">Hey {{ user.first_name }}!</h2>
+                    <p>welcome to the inbox for your references</p>
                 </div>
             </div>
             <div class="crumbs-row row">
