--- a/staticfiles/base/css/style.css
+++ b/staticfiles/base/css/style.css
@@ -4,6 +4,12 @@ body {
     flex-direction: column;
 }
 
+blockquote {
+    margin: 20px 0;
+    padding-left: 1.5rem;
+    border-left: 5px solid #f8ca66;
+}
+
 main {
     flex: 1 0 auto;
 }
