add js to promt a reminder if to_email in send_request_form is a private email

--- a/userprofile/templates/userprofile/components/forms/send_request_form.html
+++ b/userprofile/templates/userprofile/components/forms/send_request_form.html
@@ -25,8 +25,8 @@
         <div class="row imput-field">
 
         </div>
-        <blockquote >
-            We do not recoment sending a reference request to a private email adress <a href=""> learn why</a>
+        <blockquote id="extension-notice" class="grey-text">
+            Friendly notice: We do not recoment sending a reference request to a private email adress. <a href=""> learn why</a>
         </blockquote>
         <div class="row imput-field">
             <div class=" col s12 right-align">
