--- a/staticfiles/base/css/style.css
+++ b/staticfiles/base/css/style.css
@@ -8,6 +8,7 @@ blockquote {
     margin: 20px 0;
     padding-left: 1.5rem;
     border-left: 5px solid #f8ca66;
+    font-style: italic;
 }
 
 main {
