fix: update friendly reminder requestForm.js to also remove reminder if email is good.

--- a/staticfiles/base/css/style.css
+++ b/staticfiles/base/css/style.css
@@ -9,6 +9,7 @@ blockquote {
     padding-left: 1.5rem;
     border-left: 5px solid #f8ca66;
     font-style: italic;
+    visibility: hidden;
 }
 
 main {
