--- a/staticfiles/base/css/style.css
+++ b/staticfiles/base/css/style.css
@@ -152,6 +152,26 @@ header{
     margin-right: 0rem !important;
 }
 
+/* MODALS */
+.modal-header{
+    text-align: center !important;
+}
+
+.modal-title{
+    text-align: center !important;
+}
+
+.modal-image-container{
+    height: 200px;
+    overflow: hidden;
+    
+}
+
+@media only screen and (min-width: 992px){
+    .modal {
+        width: 60% !important;
+    }
+}
 
 /* FORMS */
 
