--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
     <div class="container center lighten-3">
         <section class="profile-section">
@@ -58,7 +58,7 @@
                                             Request to: {{ request.company_name }}<br />
                                             Email recipient: {{ request.to_email }}<br />
                                             Date sent: {{ request.time_sent }} <br />
-                                            status: {{ request.status }}  
+                                            status: {{ request.get_status_display }}
                                         </p>
                                     </div>
                                     <div class="col s3">
@@ -69,17 +69,48 @@
 
                             
                             <div id="{{ request.id }}" class="modal">
-                                <div class="modal-content">
-                                    <span class="indigo-text">Reference from {{ request.company_name }}</span>
+                                <div class="modal-header">
+                                    <div class="modal-image-container">
+                                        <img height="300px" width="auto" src="{% static 'img/computer-guy.svg' %}" alt="" />
+                                    </div>
+                                    <div class="modal-title">
+                                        <h3 class="hm">Delete Request</h3>
+                                    </div>
                                 </div>
-                                <div class="modal-footer indigo">
-                                    <span class="left">status: {{ request.get_status_display }}</span>
+                                <div class="modal-info container center-align">
+                                    <p> You will no longer be able to get a reference response from {{ request.to_email }} if you proceed</p>                            
+                                </div>
+                                
+                                <div class="modal-content">
+                                    
+                                    <div class="modal-question container">
+                                        <div class="row">
+                                            <p class="red-text"> Are you sure you want to permanently delete this request?</p>
+                                        </div>
+                                            <div class="row light-grey">
+                                                <p class="bold">Request Info</p>
+                                                <ul>
+                                                    <li>You worked at: <br/> <span class="blue-text">{{ request.company_name }}</span></li>
+                                                    <li>Your Reference's email: <br/>  <span class="blue-text">{{ request.to_email }}</span></li>
+                                                    <li>You worked here between: <br/> <span class="blue-text">{{ request.date_from }}</span> and <span class="blue-text">{{ request.date_to }}</span></li>
+                                                    <li>Current Status: <br/> <span class="blue-text">{{ request.get_status_display }} since {{ request.time_sent }}</span></li>
+                                                </ul>
+                                            </div>
+                                           
+                                    </div>                                    
+                                </div>
+                                
+
+                                <div class="modal-footer">
+                                   <div class="container">
+                                    
                                     <form action="{% url 'delete_request' request.id %}" method="post">
                                         {% csrf_token %} 
-                                        <input class="btn right white-text red lighten 2" value="delete" type="submit" />
+                                        <input class="btn-flat right red lighten-1 white-text" value="delete" type="submit" />
                                     </form>
-                                  <a href="" class=" modal-close waves-effect waves-green btn-flat">return</a>
+                                  <p  class="modal-close waves-effect  waves-green btn-flat">return</p>
                                  
+                                   </div>
                                 </div>
                             </div>
 
